Training/7thWeek/3-ANTLRTutorial/Chapter4/4.2/LabeledExpr.g4
grammar LabeledExpr;
import CommonLexerRules;

prog    :   stat+ ;

stat    :   expr NEWLINE            # printExpr
        |   ID '=' expr NEWLINE     # assign
        |   NEWLINE                 # blank
        |   'clear'                   # clear
        ;

expr    :   expr op=('*'|'/') expr     # MulDiv
        |   expr op=('+'|'-') expr     # AddSub
        |   INT                     # int
        |   ID                      # id
        |   '(' expr ')'            # parens
        ;

MUL     :   '*' ;
DIV     :   '/' ;
ADD     :   '+' ;
SUB     :   '-' ;
